fix invisible image

--- a/src/input.css
+++ b/src/input.css
@@ -10,8 +10,8 @@
     @apply shadow-sm py-2 md:py-6;
   }
   .girl-image {
-    background-image: url(/img/hero3.png);
-    @apply bg-cover sm:w-10 sm:h-10 rounded-full border-slate-600 h-6 w-6;
+    @apply rounded-full  h-12 w-12;
+    @apply object-scale-down
   }
   .program1 {
     @apply sm:flex items-center sm:text-lg text-sm pl-2 text-warna1 font-bold hover:text-warna5;
